# React-ChatGPT

./: .env  .gitignore  .mcp.json  AGENTS.md  CLAUDE.md  CONTEXT.MD  README.md  api.js  auth.js  database.js  docker-compose.yml  index.html  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  server.js  tailwind.config.cjs
.github/: dependabot.yml
Back-end/: app.js  mailer.js
REact chat /: bruno.json  reggister.bru
back-end/: app.js  mailer.js
backend/: .env.example  Dockerfile  apiKeyCache.ts  app.js  app.ts  config.ts  constants.ts  eslint.config.js  logger.ts  package-lock.json  package.json  rateLimitStore.ts  server.js  swagger.ts  tsconfig.json  vitest.config.ts
backend-rust/: .env.example  Cargo.toml  Dockerfile  README.md
backend-rust/src/: app.rs  config.rs  error.rs  main.rs  state.rs
backend-rust/src/db/: adapter.rs  mod.rs  schema.rs  search.rs
backend-rust/src/dto/: auth.rs  billing.rs  chat.rs  mod.rs  projects.rs  search.rs  threads.rs  users.rs
backend-rust/src/extractors/: auth_user.rs  mod.rs  validated_json.rs  validated_path.rs  validated_query.rs
backend-rust/src/handlers/: auth.rs  billing.rs  chat.rs  oauth.rs  projects.rs  search.rs  threads.rs  users.rs
backend-rust/src/middleware/: auth.rs  cors.rs  csrf.rs  mod.rs  plan_limits.rs  rate_limit.rs  request_id.rs  security_headers.rs
backend-rust/src/models/: api_key.rs  desktop_license.rs  email_verification.rs  message.rs  mod.rs  password_reset.rs  plan.rs  project.rs  subscription.rs  thread.rs  usage.rs  user.rs
backend-rust/src/providers/: claude.rs  gemini.rs  groq.rs  mistral.rs  mod.rs  openai.rs
backend-rust/src/routes/: auth.rs  billing.rs  chat.rs  mod.rs  oauth.rs  projects.rs  search.rs  threads.rs  users.rs
backend-rust/src/services/: api_key_cache.rs  auth_cookies.rs  cleanup.rs  encryption.rs  mailer.rs  mod.rs  rate_limit_store.rs  usage.rs
backend-rust/src/tests/: api_key_cache_test.rs  auth_test.rs  encryption_test.rs  mod.rs  rate_limit_store_test.rs  validate_test.rs
docs/: api.md  deploiement-o2switch-cpanel.md  guide-utilisateur.md
frontend/: Dockerfile  components.json  eslint.config.js  index.html  package-lock.json  package.json  tailwind.config.cjs  tsconfig.json  vite.config.js
frontend-svelte/: .env.example  README.md  package-lock.json  package.json  svelte.config.js
src/: App.jsx  (+4 more)
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: crypto.rs  error.rs  lib.rs  state.rs
src-tauri/src/commands/: chat.rs  local_model.rs  mod.rs  project.rs  search.rs  thread.rs  user.rs
src-tauri/src/db/: mod.rs
src-tauri/src/providers/: claude.rs  gemini.rs  groq.rs  local.rs  mistral.rs  mod.rs  openai.rs
(+278 files in other folders)
