[package]
name = "chatgpt-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.8", features = ["macros", "multipart"] }
axum-extra = { version = "0.10", features = ["cookie", "typed-header"] }
tokio = { version = "1", features = ["full"] }
tower = { version = "0.5", features = ["full"] }
tower-http = { version = "0.6", features = ["cors", "trace", "set-header", "limit", "request-id"] }
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "sqlite", "postgres", "chrono", "uuid", "json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
validator = { version = "0.19", features = ["derive"] }
jsonwebtoken = "9"
bcrypt = "0.16"
aes-gcm = "0.10"
scrypt = "0.11"
rand = "0.8"
base64 = "0.22"
sha2 = "0.10"
hex = "0.4"
reqwest = { version = "0.12", features = ["json", "stream", "rustls-tls"] }
reqwest-eventsource = "0.6"
futures = "0.3"
tokio-stream = "0.1"
async-stripe = { version = "0.39", features = ["runtime-tokio-hyper"] }
lettre = { version = "0.11", default-features = false, features = ["tokio1-rustls-tls", "dkim", "smtp-transport", "builder"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
dotenvy = "0.15"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
dashmap = "6"
ammonia = "4"
regex = "1"
thiserror = "2"
anyhow = "1"
time = { version = "0.3", features = ["std"] }
oauth2 = "5"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = "debuginfo"
