[package]
name = "react-chatgpt-desktop"
version = "0.1.0"
description = "React ChatGPT Desktop — multi-provider AI chatbot"
authors = ["you"]
license = "MIT"
repository = ""
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-biometry = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.31", features = ["bundled", "vtab"] }
reqwest = { version = "0.12", features = ["stream", "json"] }
tokio = { version = "1", features = ["full"] }
aes-gcm = "0.10"
rand = "0.8"
uuid = { version = "1", features = ["v4"] }
base64 = "0.22"
scrypt = "0.11"
chrono = { version = "0.4", features = ["serde"] }
futures = "0.3"
thiserror = "2"
dirs = "6"
log = "0.4"
ammonia = "4"
hostname = "0.4"
llama-cpp-2 = { version = "0.1", features = ["metal"] }
encoding_rs = "0.8"
tauri-plugin-dialog = "2"
